ocultando uma li

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Contêiner principal -->
     <div id="container">
       <div id="profile">
         <img src="./assets/avatar-light.png" alt="Foto de Márcio Manutec" />
@@ -31,9 +32,13 @@
           >
         </li>
         <li>
-          <a href="#">Acessar o Linkedin</a>
+          <a
+            href="https://linkedin.com/in/márcio-alves-77358848"
+            target="_blank"
+            >Acessar o Linkedin</a
+          >
         </li>
-        <li>
+        <li class="hidden">
           <a href="https://github.com/marciomanutec" target="_blank"
             >Ver meu portfólio</a
           >
@@ -49,7 +54,7 @@
         <a href="https://youtube.com" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="https://linkedin.com" target="_blank">
+        <a href="https://linkedin.com/in/márcio-alves-77358848" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
